; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/bsnmpd/tools/bsnmptools/extr_bsnmpget.c_parse_non_repeaters.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/bsnmpd/tools/bsnmptools/extr_bsnmpget.c_parse_non_repeaters.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snmp_toolinfo = type { i32 }

@SNMP_MAX_BINDINGS = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [53 x i8] c"Non repeaters value greater than %d maximum allowed.\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snmp_toolinfo*, i8*)* @parse_non_repeaters to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_non_repeaters(%struct.snmp_toolinfo* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.snmp_toolinfo*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store %struct.snmp_toolinfo* %0, %struct.snmp_toolinfo** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = icmp ne i8* %7, null
  %9 = zext i1 %8 to i32
  %10 = call i32 @assert(i32 %9)
  %11 = load i8*, i8** %5, align 8
  %12 = call i64 @strtoul(i8* %11, i8* null, i32 10)
  store i64 %12, i64* %6, align 8
  %13 = load i64, i64* %6, align 8
  %14 = load i64, i64* @SNMP_MAX_BINDINGS, align 8
  %15 = icmp sgt i64 %13, %14
  br i1 %15, label %16, label %19

16:                                               ; preds = %2
  %17 = load i64, i64* @SNMP_MAX_BINDINGS, align 8
  %18 = call i32 @warnx(i8* getelementptr inbounds ([53 x i8], [53 x i8]* @.str, i64 0, i64 0), i64 %17)
  store i32 -1, i32* %3, align 4
  br label %23

19:                                               ; preds = %2
  %20 = load %struct.snmp_toolinfo*, %struct.snmp_toolinfo** %4, align 8
  %21 = load i64, i64* %6, align 8
  %22 = call i32 @SET_NONREP(%struct.snmp_toolinfo* %20, i64 %21)
  store i32 2, i32* %3, align 4
  br label %23

23:                                               ; preds = %19, %16
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @strtoul(i8*, i8*, i32) #1

declare dso_local i32 @warnx(i8*, i64) #1

declare dso_local i32 @SET_NONREP(%struct.snmp_toolinfo*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
